Organizando HTML, CSS e JS da seção "sobre mim"

--- a/index.html
+++ b/index.html
@@ -41,4 +41,19 @@
         </div>
     </header>
 
+    <!-- Seção Sobre Mim -->
+    <section class="about-section" id="about">
+        <div class="about-content">
+            <div class="about-left">
+                <h2>Ajudando marcas a se destacarem na era digital.</h2>
+                <p>Juntos definiremos o novo status quo. Sem bobagens, sempre na vanguarda.</p>
+            </div>
+            <div class="about-right">
+                <p>A combinação da minha paixão por design, código e interação me posiciona em um lugar único no mundo do web design.</p>
+                <button class="about-button" onclick="goToAbout()">Sobre mim</button>
+            </div>
+        </div>
+    </section>
+
 <script src="js/script.js"></script>
+
